--- a/MaterialDesignThemes.Wpf/Themes/Generic.xaml
+++ b/MaterialDesignThemes.Wpf/Themes/Generic.xaml
@@ -2,7 +2,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:MaterialDesignThemes.Wpf"
-    xmlns:converters="clr-namespace:MaterialDesignThemes.Wpf.Converters">
+    xmlns:converters="clr-namespace:MaterialDesignThemes.Wpf.Converters"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib">
 
 	<ResourceDictionary.MergedDictionaries>
 		<!--	we only bring in the dictionaries for controls which were "invented"
@@ -38,6 +39,7 @@
                 <ControlTemplate TargetType="{x:Type local:Ripple}">
                     <ControlTemplate.Resources>
                         <QuadraticEase x:Key="EasingFunction" EasingMode="EaseOut"/>
+                        <sys:Double x:Key="EllipseOpacity">0.45</sys:Double>
                     </ControlTemplate.Resources>
                     <Grid Background="Transparent">
                         <VisualStateManager.VisualStateGroups>
@@ -45,9 +47,9 @@
                                 <VisualStateGroup.Transitions>
                                     <VisualTransition GeneratedDuration="0:0:0.7" To="MousePressed">
                                         <Storyboard>
-                                            <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="Border"
+                                            <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="ClickEllipse"
                                                              EasingFunction="{StaticResource EasingFunction}"
-                                                             Duration="0:0:0.7" From="0" To="1"/>
+                                                             Duration="0:0:0.7" From="0" To="{StaticResource EllipseOpacity}"/>
                                             <DoubleAnimation Storyboard.TargetProperty="ScaleX" Storyboard.TargetName="ScaleTransform"
                                                              EasingFunction="{StaticResource EasingFunction}"
                                                              Duration="0:0:0.7" From="0" To="1"/>
@@ -58,9 +60,12 @@
                                     </VisualTransition>
                                     <VisualTransition GeneratedDuration="0:0:0.7" To="Normal">
                                         <Storyboard>
-                                            <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="Border"
+                                            <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="ClickEllipse"
                                                              EasingFunction="{StaticResource EasingFunction}"
-                                                             Duration="0:0:1" To="0"/>
+                                                             Duration="0:0:0.3" To="{StaticResource EllipseOpacity}"/>
+                                            <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="ClickEllipse"
+                                                             EasingFunction="{StaticResource EasingFunction}"
+                                                             BeginTime="0:0:0.3" Duration="0:0:0.4" To="0"/>
                                             <DoubleAnimation Storyboard.TargetProperty="ScaleX" Storyboard.TargetName="ScaleTransform"
                                                              EasingFunction="{StaticResource EasingFunction}"
                                                              Duration="0:0:0.7" To="1"/>
@@ -69,7 +74,7 @@
                                                              Duration="0:0:0.7" To="1"/>
                                         </Storyboard>
                                     </VisualTransition>
-                                    <VisualTransition From="MousePressed" To="MouseOut">
+                                    <VisualTransition GeneratedDuration="0:0:0.7" From="MousePressed" To="MouseOut">
                                         <Storyboard>
                                             <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="ScaleX" Storyboard.TargetName="ScaleTransform">
                                                 <EasingDoubleKeyFrame KeyTime="0:0:0.12" Value="0">
@@ -93,7 +98,7 @@
                                 </VisualStateGroup.Transitions>
                                 <VisualState x:Name="Normal">
                                     <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="Border"
+                                        <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="ClickEllipse"
                                                          Duration="0" To="0"/>
                                         <DoubleAnimation Storyboard.TargetProperty="ScaleX" Storyboard.TargetName="ScaleTransform"
                                                          Duration="0" To="1"/>
@@ -103,8 +108,8 @@
                                 </VisualState>
                                 <VisualState x:Name="MousePressed">
                                     <Storyboard>
-                                        <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="Border"
-                                                         Duration="0" From="0" To="1"/>
+                                        <DoubleAnimation Storyboard.TargetProperty="Opacity" Storyboard.TargetName="ClickEllipse"
+                                                         Duration="0" From="0" To="{StaticResource EllipseOpacity}"/>
                                         <DoubleAnimation Storyboard.TargetProperty="ScaleX" Storyboard.TargetName="ScaleTransform"
                                                          Duration="0" From="0" To="1"/>
                                         <DoubleAnimation Storyboard.TargetProperty="ScaleY" Storyboard.TargetName="ScaleTransform"
@@ -120,26 +125,23 @@
                                 </VisualState>
                             </VisualStateGroup>
                         </VisualStateManager.VisualStateGroups>
-                        <Border x:Name="Border"
-                                Opacity="0">
-                            <Canvas IsHitTestVisible="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                                <Ellipse x:Name="ClickEllipse" Fill="{TemplateBinding Feedback}" Opacity="0.45" 
+                        <Canvas IsHitTestVisible="False" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Ellipse x:Name="ClickEllipse" Fill="{TemplateBinding Feedback}" Opacity="{StaticResource EllipseOpacity}" 
                                          Width="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=RippleSize}" 
                                          Height="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=RippleSize}" 
                                          Canvas.Left="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=RippleX}" 
                                          Canvas.Top="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=RippleY}"
                                          RenderTransformOrigin=".5,.5">
-                                    <Ellipse.RenderTransform>
-                                        <TransformGroup>
-                                            <ScaleTransform x:Name="ScaleTransform" ScaleX="0" ScaleY="0" />
-                                            <SkewTransform/>
-                                            <RotateTransform/>
-                                            <TranslateTransform x:Name="TranslateTransform"/>
-                                        </TransformGroup>
-                                    </Ellipse.RenderTransform>
-                                </Ellipse>
-                            </Canvas>
-                        </Border>
+                                <Ellipse.RenderTransform>
+                                    <TransformGroup>
+                                        <ScaleTransform x:Name="ScaleTransform" ScaleX="0" ScaleY="0" />
+                                        <SkewTransform/>
+                                        <RotateTransform/>
+                                        <TranslateTransform x:Name="TranslateTransform"/>
+                                    </TransformGroup>
+                                </Ellipse.RenderTransform>
+                            </Ellipse>
+                        </Canvas>
                         <ContentPresenter Content="{TemplateBinding Content}"
                                           ContentTemplate="{TemplateBinding ContentTemplate}"
                                           Margin="{TemplateBinding Padding}"
